[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safari"
version = "0.1.0"
description = "Convolutions for Sequence Modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/HazyResearch/safari"
"Bug Tracker" = "https://github.com/HazyResearch/safari/issues"